--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Temp"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".tour_add.base_choice.BaseChoiceActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,8 +28,13 @@
 
 
         <activity
-            android:name=".tour_add.base_choice.BaseChoiceActivity"
-            android:screenOrientation="portrait"
+            android:name=".MainActivity"
+            />
+        <activity
+            android:name=".tour_add.country_choice.CountryChoiceActivity"
+            />
+        <activity
+            android:name=".tour_add.date_choice.DateChoiceActivity"
             />
     </application>
 
