--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,9 @@ dependencies {
 
     implementation("com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2")
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "com.kakao.sdk:v2-user:2.0.1"
 
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
 }
