--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,16 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     implementation 'com.google.android.material:material:1.1.0'
+
+    //Gson
+    implementation 'com.google.code.gson:gson:2.9.0'
+
+    //Gson Converter
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    //Retrofit2
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
+
 }
