--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,9 +44,13 @@ android {
 }
 
 dependencies {
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2'
+    implementation 'org.jsoup:jsoup:1.13.1'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
-//    implementation 'me.relex:circleindicator:2.1.4'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'com.google.android.material:material:1.7.0'
