--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -13,7 +16,7 @@
         android:theme="@style/Theme.Temp"
         tools:targetApi="31">
         <activity
-            android:name=".todo.TodoActivity"
+            android:name=".Recommend.Recommend"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -39,6 +42,7 @@
             android:name=".tour_add.base_choice.BaseChoiceActivity"
             android:screenOrientation="portrait"
             />
+        <activity android:name=".RecomListActivity"/>
     </application>
 
 </manifest>
