--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,7 @@
         tools:targetApi="31">
 
         <activity
-
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
-
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -39,11 +37,9 @@
         <activity
             android:name=".tour_add.base_choice.BaseChoiceActivity"
             android:exported="false">
-
         </activity>
 
         <activity
-
             android:name=".MainActivity"
             android:exported="true" >
             <intent-filter>
@@ -60,11 +56,9 @@
         <activity
             android:name=".tour_add.date_choice.DateChoiceActivity"
             />
+
         <activity
-            android:name=".MainActivity"
-            />
-        <activity
-            android:name=".todo.todo_detais.TodoDetailsActivity"
+            android:name=".todo.todo_details.TodoDetailsActivity"
             />
 
     </application>
