--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,6 @@
 
         <activity
 
-
-
             android:name=".todo.TodoActivity"
             android:exported="false">
 
@@ -71,8 +69,7 @@
             />
 
         <activity
-
-            android:name=".todo.todo_detais.TodoDetailsActivity"
+            android:name=".todo.todo_details.TodoDetailsActivity"
             />
 
     </application>
