--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,11 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:usesCleartextTraffic="true"
+        android:name=".GlobalApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -16,6 +15,7 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.Temp"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".SplashActivity"
@@ -23,19 +23,15 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-
             android:name=".todo.TodoActivity"
             android:exported="false">
-
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -64,12 +60,9 @@
             android:name=".MainActivity"
             android:exported="false">
         </activity>
-
         <activity android:name=".tour_add.country_choice.CountryChoiceActivity" />
         <activity android:name=".tour_add.date_choice.DateChoiceActivity" />
         <activity android:name=".todo.todo_details.TodoDetailsActivity" />
-
-
     </application>
 
 </manifest>
