--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,7 +65,7 @@
         <activity android:name=".tour_add.country_choice.CountryChoiceActivity" />
         <activity android:name=".tour_add.date_choice.DateChoiceActivity" />
         <activity android:name=".todo.todo_details.TodoDetailsActivity" />
-
+        <activity android:name=".RecomListActivity"/>
     </application>
 
 </manifest>
